--- a/src/App.css
+++ b/src/App.css
@@ -95,32 +95,31 @@ footer {
 	/* haut droite bas gauche */
 }
 
-#choixFrequence {
+#frequencyChoose {
 	display: flex;
 	flex-wrap: wrap;
+	align-content: center;
 }
 
-.frequence_false,
-.programme_false {
+#programComfirm {
+	display: flex;
+	flex-wrap: wrap;
+	align-content: center;
+}
+
+.button_false,
+.button_true {
+	max-width: 20%;
 	justify-content: center;
 	font-size: 1em;
 	flex: 1 1;
 	background-color: silver;
 	border-radius: 10px;
-	padding: 1em 0 1em 0;
-	margin: 0.2em;
+	padding: 20px 0 20px 0;
+	margin-right: 10px;
 	display: flex;
 }
 
-.frequence_true,
-.programme_true {
-	justify-content: center;
-	font-size: 1em;
-	flex: 1 1;
-	background-color: silver;
-	border-radius: 10px;
-	padding: 1em 0 1em 0;
+.button_true {
 	box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.582);
-	margin: 0.2em;
-	display: flex;
 }
