--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,14 @@ footer {
 	flex-wrap: wrap;
 	align-content: center;
 }
+
+table {
+	border-collapse: collapse;
+}
+
+td {
+	border: 1px solid black;
+	background-color: rgba(255, 255, 255, 0.5);
+	text-align: center;
+	padding: 10px;
+}
